Change return value of FrameSelection::modify() to prevent unnecessary window scrolling

This patch changes return value of |FrameSelection::modify()| to prevent
unnecessary window scrolling by returning true, indicating user action is
processed. Note: for spacial navigation case, |FrameSelection::modify()| returns
false to allow default key event handler of spacial navigation to move
focus to another element.

Before this patch, hitting right arrow key at end of text field causes
window scrolling by WebViewImpl::keyEventDefault() due by
|FrameSelection::modify()| returns false since selection isn't changed.

BUG=633376
TEST=run_webkit_unit_tests --gtest_filter=FrameSelectionTest.ModifyWithUserTriggered

Review-Url: https://codereview.chromium.org/2200833007
Cr-Commit-Position: refs/heads/master@{#409995}

Former-commit-id: 8e786c79ce204adb73db01db98f5a606c8365c2a